tests/bad/05_invalid_identifier.src
# Test: Invalid identifier (starts with number)
void main([string] args) {
    int 123abc = 42;  # Invalid identifier
    return 123abc;
}
